# nunchuk-desktop

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CreateICNS.sh  EncryptedMultisigDescriptor.java  Icon.icns  Info.plist  README-MAC.md  README-WINDOWS.md  README.md  add_app_strings.py  build.sh  configBuild.sh  entitlements.plist  export_qt  fonts_Lato.qrc  fonts_Montserrat.qrc  gen_qml_registry.py  generate_app_strings.py  main.cpp  main.qml  main_ani01.qml  main_ani02.qml  main_ani03.qml  nunchuck-client-qt.pro  nunchuck-client-qt_en_US.ts  qml.qrc
.github/workflows/: build-linux.yml  reproducible_linux.yml
FederatedAuth/: QAppleSigninView.cpp  QAppleSigninView.h  QGoogleSigninView.cpp  QGoogleSigninView.h  QLoadingOverlay.cpp  QLoadingOverlay.h
Models/: AppModel.cpp  AppModel.h  AppOnlineModel.cpp  AppOnlineModel.h  AppSetting.cpp  AppSetting.h  DeviceModel.cpp  DeviceModel.h  Localization.cpp  Localization.h  MasterSignerModel.cpp  MasterSignerModel.h  OnBoardingModel.cpp  OnBoardingModel.h  ProfileSetting.cpp  ProfileSetting.h  QWarningMessage.cpp  QWarningMessage.h  ServiceSetting.cpp  ServiceSetting.h  SingleSignerModel.cpp  SingleSignerModel.h  TransactionModel.cpp  TransactionModel.h  TypeDefine.h  UTXOModel.cpp  UTXOModel.h  WalletModel.cpp  WalletModel.h  Worker.cpp  Worker.h
Models/Chats/: ClientController.cpp  ClientController.h  QContactModel.cpp  QContactModel.h  QConversationModel.cpp  QConversationModel.h  QGroupWalletRoomModel.cpp  QGroupWalletRoomModel.h  QLoggedInDeviceModel.cpp  QLoggedInDeviceModel.h  QLogginManager.cpp  QLogginManager.h  QNunchukImageProvider.cpp  QNunchukImageProvider.h  QNunchukMatrixEvent.cpp  QNunchukMatrixEvent.h  QNunchukRoomModel.cpp  QNunchukRoomModel.h  QNunchukRoomUsers.cpp  QNunchukRoomUsers.h  QRoomCustomEvent.cpp  QRoomCustomEvent.h  QRoomTransaction.cpp  QRoomTransaction.h  QRoomWallet.cpp  QRoomWallet.h  QUserWallets.cpp  QUserWallets.h  QWalletSignersModel.cpp  QWalletSignersModel.h
Models/Commons/: CoinsControl.cpp  CoinsControl.h  ISigner.cpp  ISigner.h  QStateFlow.cpp  QStateFlow.h  ReplaceKeyFreeUser.cpp  ReplaceKeyFreeUser.h  SignInViaDummy.cpp  SignInViaDummy.h  Slugs.cpp  Slugs.h  WalletKeys.cpp  WalletKeys.h
Models/Premiums/: GroupSandboxModel.cpp  GroupSandboxModel.h  QAssistedDraftWallets.cpp  QAssistedDraftWallets.h  QBasePremium.cpp  QBasePremium.h  QGroupDashboard.cpp  QGroupDashboard.h  QGroupWalletDummyTx.cpp  QGroupWalletDummyTx.h  QGroupWalletHealthCheck.cpp  QGroupWalletHealthCheck.h  QGroupWallets.cpp  QGroupWallets.h  QInheritanceClaiming.cpp  QInheritanceClaiming.h  QInheritancePlan.cpp  QInheritancePlan.h  QKeyRecovery.cpp  QKeyRecovery.h  QRecurringPayment.cpp  QRecurringPayment.h  QServerKey.cpp  QServerKey.h  QSharedWallets.cpp  QSharedWallets.h  QSignerManagement.cpp  QSignerManagement.h  QSwitchAPI.cpp  QSwitchAPI.h  QUserWalletDummyTx.cpp  QUserWalletDummyTx.h  QUserWallets.cpp  QUserWallets.h  QWalletDummyTx.cpp  QWalletDummyTx.h  QWalletManagement.cpp  QWalletManagement.h  QWalletServicesTag.cpp  QWalletServicesTag.h
Models/Printer/: QPDFPrinter.cpp  QPDFPrinter.h
Models/Signers/: HotKey.cpp  HotKey.h  ISignerManagement.h  PrimaryKeyAccount.cpp  PrimaryKeyAccount.h  QSignerManagement.cpp  QSignerManagement.h
Models/Transactions/: BaseTransaction.cpp  BaseTransaction.h  MiniscriptTransaction.cpp  MiniscriptTransaction.h  TransactionHelper.cpp  TransactionHelper.h
Models/Wallets/: AssistedWallet.cpp  (+19 more)
QAppEngine/: QAppEngine.pri  QAppEngine.qrc  QDeployment.pri
QRScanner/: QBarcodeDecoder.cpp  QBarcodeDecoder.h  QBarcodeFilter.cpp  QBarcodeFilter.h  QBarcodeGenerator.cpp  QBarcodeGenerator.h
RegisterTypes/: DashRectangle.cpp  DashRectangle.h
Views/: STATE_ID_ROOT.cpp  STATE_ID_ROOT.h  STATE_ID_SCR_ADD_COLDCARD.cpp  STATE_ID_SCR_ADD_COLDCARD.h  STATE_ID_SCR_ADD_COLDCARD_ASK.cpp  STATE_ID_SCR_ADD_COLDCARD_ASK.h  STATE_ID_SCR_ADD_COLDCARD_EXIST.cpp  STATE_ID_SCR_ADD_COLDCARD_EXIST.h  STATE_ID_SCR_ADD_HARDWARE.cpp  STATE_ID_SCR_ADD_HARDWARE.h  STATE_ID_SCR_ADD_HARDWARE_ASK.cpp  STATE_ID_SCR_ADD_HARDWARE_ASK.h  STATE_ID_SCR_ADD_HARDWARE_EXIST.cpp  STATE_ID_SCR_ADD_HARDWARE_EXIST.h  STATE_ID_SCR_ADD_HARDWARE_SIGNER.cpp  STATE_ID_SCR_ADD_HARDWARE_SIGNER.h  STATE_ID_SCR_ADD_HARDWARE_SIGNER_TO_WALLET.cpp  STATE_ID_SCR_ADD_HARDWARE_SIGNER_TO_WALLET.h  STATE_ID_SCR_ADD_LEDGER.cpp  STATE_ID_SCR_ADD_LEDGER.h  STATE_ID_SCR_ADD_LEDGER_ASK.cpp  STATE_ID_SCR_ADD_LEDGER_ASK.h  STATE_ID_SCR_ADD_LEDGER_EXIST.cpp  STATE_ID_SCR_ADD_LEDGER_EXIST.h  STATE_ID_SCR_ADD_MASTER_SIGNER_RESULT.cpp  STATE_ID_SCR_ADD_MASTER_SIGNER_RESULT.h  STATE_ID_SCR_ADD_NEW_SIGNER.cpp  STATE_ID_SCR_ADD_NEW_SIGNER.h  STATE_ID_SCR_ADD_NEW_SIGNER_TO_WALLET.cpp  STATE_ID_SCR_ADD_NEW_SIGNER_TO_WALLET.h  STATE_ID_SCR_ADD_NEW_SOFTWARE_SIGNER.cpp  STATE_ID_SCR_ADD_NEW_SOFTWARE_SIGNER.h  STATE_ID_SCR_ADD_REMOTE_SIGNER_RESULT.cpp  STATE_ID_SCR_ADD_REMOTE_SIGNER_RESULT.h  STATE_ID_SCR_ADD_TREZOR.cpp  STATE_ID_SCR_ADD_TREZOR.h  STATE_ID_SCR_ADD_TREZOR_ASK.cpp  STATE_ID_SCR_ADD_TREZOR_ASK.h  STATE_ID_SCR_ADD_TREZOR_EXIST.cpp  STATE_ID_SCR_ADD_TREZOR_EXIST.h  (+164 more)
app/: AppContext.cpp  AppContext.h  AppRegister.h  QmlRegister.cpp  QmlSetContextProperty.cpp  main.cpp
deploy/: AppRun  nunchuk-qt.desktop  setup.nsi
features/: ScreenQmlDefine.hpp  generated_qml_keys.hpp  generated_qml_registry.hpp
ifaces/: Draco.cpp  Draco.h  DracoDefines.h  QRCodeItem.cpp  QRCodeItem.h  QRGenerator.cpp  QRGenerator.h  bridgeSigner.cpp  bridgeSigner.h  bridgeTransaction.cpp  bridgeTransaction.h  bridgeWallet.cpp  bridgeWallet.h  bridgeifaces.cpp  bridgeifaces.h  nunchuckiface.cpp  nunchuckiface.h  nunchucklistener.cpp  nunchucklistener.h  nunchuckstub.cpp  nunchuckstub.h  qUtils.cpp  qUtils.h
localization/: STR_CPP.h  STR_QML.js  localization.js  localization.qrc  nunchuk_en.qm  nunchuk_en.ts
reproducible-builds/: Dockerfile.linux  README.md  build_linux.sh  linux.Dockerfile  linux.sh  package_linux.sh  reproducible_zip.sh  toolchain-mingw64.cmake  win.Dockerfile  win32.Dockerfile  windows.Dockerfile  windows.sh
res/: nunchuk.rc
(+1420 files in other folders)
